--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,10 +18,17 @@
     </properties>
 
     <dependencies>
+        <!-- utils -->
         <dependency>
             <groupId>io.github.generaloss</groupId>
             <artifactId>jpize-utils</artifactId>
             <version>24.11.2</version>
+        </dependency>
+        <!-- json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
         </dependency>
     </dependencies>
 
