--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>io.github.generaloss</groupId>
             <artifactId>jpize-utils</artifactId>
-            <version>25.1.2</version>
+            <version>SNAPSHOT-25.1.3.01</version>
         </dependency>
     </dependencies>
 
