--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -22,7 +22,13 @@
         <dependency>
             <groupId>io.github.generaloss</groupId>
             <artifactId>jpize-utils</artifactId>
-            <version>SNAPSHOT-25.1.3.16</version>
+            <version>SNAPSHOT-25.1.3.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.19.0</version>
         </dependency>
     </dependencies>
 
