--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>io.github.generaloss</groupId>
             <artifactId>jpize-core</artifactId>
-            <version>25.2.7</version>
+            <version>25.2.8-SNAPSHOT-1</version>
         </dependency>
         <dependency>
             <groupId>io.github.generaloss</groupId>
