--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,12 +22,12 @@
         <dependency>
             <groupId>io.github.generaloss</groupId>
             <artifactId>jpize-core</artifactId>
-            <version>25.4.1-SNAPSHOT-1-4.3</version>
+            <version>25.5.1-SNAPSHOT-1</version>
         </dependency>
         <dependency>
             <groupId>io.github.generaloss</groupId>
             <artifactId>jpize-core-lwjgl</artifactId>
-            <version>25.4.1-SNAPSHOT-1-4.3-1</version>
+            <version>25.5.1-SNAPSHOT-1-1</version>
         </dependency>
         <dependency>
             <groupId>io.github.generaloss</groupId>
