--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>io.github.generaloss</groupId>
             <artifactId>jpize-utils</artifactId>
-            <version>25.5.1-SNAPSHOT-3</version>
+            <version>25.5.1</version>
         </dependency>
     </dependencies>
 
